# NFDS-sim

./: README.md  test.csv
nfds_sim/: Cargo.toml
nfds_sim/src/: lib.rs  main.rs  populations.rs
