[package]
name = "nfds_sim"
version = "0.1.0"
edition = "2021"
authors = ["Samuel T. Horsfield <shorsfield@ebi.ac.uk>"]

[dependencies]
csv = "1.3"
clap = "3.0"
rand = "0.8.5"
rand_distr = "0.4"
rayon = "1.5"
statrs = "0.16"
logsumexp = "0.1"
safe_arch = "0.7"
ndarray = { version = "0.15.6", features = ["rayon"] }